TODO
* implement libsmdev_open_wide
* libsmdev_handle_get_offset
* work on libsmdev_metadata

Library
* add glib support
* move fstat to file_io ?
Read:
* windows read error retry support
Media information:
* add Windows support for accessing memory device
* detect removable disk
* detect optical disk
* determine optical disk sessions
* detect floppy
* detect bus type
* determine USB serial number
* use pre windows XP io control codes as fallback ?

20100124
* removed unused string and system macros
* updated common, liberror (snwprintf fix)

20100123
* worked on wide character functions
  - added system codepage support
* update for missing varadic macro support in Borland C++ Builder 5.5

20100121
* worked on winapi support

20100120
* added posix_fadvice

20100118
* worked on error listing

20100117
* worked on read error retries

20100116
* worked on initial version
* worked on read error retries

20100110
* Created initial version based on earlier media input/output code
