@@ -18,6 +18,9 @@ Media information:
 * determine USB serial number
 * use pre windows XP io control codes as fallback ?
 
+20100126
+* worked on solution for Debian 4.0 posix_fadvise break
+
 20100124
 * removed unused string and system macros
 * updated common, liberror (snwprintf fix)
